--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ecommerce app to practice javascript",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -e js,html,css index.js"
+    "dev": "nodemon -e js,html,css index.js",
+    "start": "index.js"
   },
   "author": "hal",
   "license": "ISC",
