--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -e js,html,css index.js",
-    "start": "index.js"
+    "start": "node index.js"
   },
   "author": "hal",
   "license": "ISC",
